...
    <string name="arena_damage_dealt">Damage dealt</string>
    <string name="arena_damage_received">Damage received</string>
    <string name="arena_your_items">Your items used</string>
    <string name="arena_their_items">Opponent items used</string>
    <string name="arena_result_ready">Battle concluded</string>
    <string-array name="arena_stages">
        <item>Baby I</item><item>Baby II</item><item>Rookie</item><item>Champion</item><item>Ultimate</item><item>Mega</item>
    </string-array>
</resources>

